Театральный Нижний: драмтеатр

--- a/stands/theatrical.html
+++ b/stands/theatrical.html
@@ -58,10 +58,18 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">Введение</p>
+                <p class="introduction">Нижний Новгород - один из первых российских городов, в которых появились театры</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="example" data-chapter="Пример главы">
-                    <p>Текст главы</p>
+                <div class="chapter" id="drama_theatre" data-chapter="Нижегородский театр драмы имени М. Горького">
+                    <p>Нижегородский театр драмы - один из старейших русских театров. Он был создан в 1798 году, когда князь Николай Григорьевич Шаховский решил открыть в Нижнем Новгороде публичный театр.</p>
+                    <p>Первая труппа театра состояла из более чем ста крепостных актёров помещика Ардатовского уезда Шаховского. Под театр был перестроен один из городских домов князя на углу Большой и Малой Печерских улиц (сейчас на этом месте находится речное училище). В нём имелось 27 лож, 50 кресел, партер на 100 человек и верхняя галерея на 200 человек. Небольшая площадь перед зданием, - одна из двух в городе, вымощенных камнем, - стала называться Театральной. Репертуар театра не отличался от столичного и включал кроме комедий и трагедий оперы и балеты.</p>
+                    <p>Со смертью князя в 1824 году дела театра пошли хуже, так как наследники Шаховского не любили сценического дела. В 1827 году два богатых театрала Распутин и Климов купили театр, включая декорации и труппу, за 100 тысяч рублей. Блестящий период в истории театра продолжался до 1838 года, когда началась череда смен хозяев театра. Качество игры упало, убытки от содержания театра росли. В 1853 году театр сгорел.</p>
+                    <p>Театр был вновь открыт 1 декабря 1855 года, на Благовещенской площади (Минина и Пожарского). Дом, в котором размещался театр, предпологалось использовать как доходный дом - дом для сдачи квартир в аренду, но большой любитель театра губернатор М. А. Урусов убедил сдать его под театр. Дела театра шли плохо, антрепренёры менялись, аренда платилась неисправно, и сын Петра Бугрова - владельца дома - Александр потребовал выселения театра. В 1862 году здание было выкуплено губернским предводителем А. А. Турчаниновым, и после его смерти в 1863 году снова сдано под театр.</p>
+                    <p>В 1894 году в преддверии Всероссийской промышленно-художественной выставки городская Дума собиралась отремонтировать здание театра, пострадавшее от нескольких пожаров. Но гласный Думы Николай Александрович Бугров, не желавший видеть театр в доме, построенном его дедом, по соображениям старообрядческого благочестия, предложил 200 тысяч рублей для постройки нового здания на Большой Покровской. Дума добавила от себя 50 тысяч, получила правительственную субсидию, и через два года появился новый театр. Театр открылся в день коронования их императорских величеств 15 мая 1896 года парадным спектаклем — оперой М. И. Глинки "Жизнь за царя" с участием молодого Федора Шаляпина.</p>
+                    <img data-label="1913 год"/>
+                    <p>С 1928 по 1945 год был поставлен 191 новый спектакль, из них советские пьесы составили 102 спектакля, русская классика — 62 спектакля, западноевропейская классика - 22 и пьесы современных зарубежных авторов - 5 спектаклей.</p>
+                    <p>В 1948 году Нижегородскому государственному театру драмы было присвоено имя Максима Горького, а в 1949 году в связи со 150-летием со дня основания театр награждён орденом Трудового Красного Знамени. В 1968 году театру присвоено звание «академический» — второму из периферийных театров России.</p>
+                    <img data-label="Наши дни"/>
                 </div>
                 <br>
             </div>
