Театральный Нижний: театр имени Пушкина

--- a/stands/theatrical.html
+++ b/stands/theatrical.html
@@ -71,6 +71,13 @@
                     <p>В 1948 году Нижегородскому государственному театру драмы было присвоено имя Максима Горького, а в 1949 году в связи со 150-летием со дня основания театр награждён орденом Трудового Красного Знамени. В 1968 году театру присвоено звание «академический» — второму из периферийных театров России.</p>
                     <img data-label="Наши дни"/>
                 </div>
+                <div class="chapter" id="pushkin_theatre" data-chapter="Нижегородский театр оперы и балета имени А. С. Пушкина">
+                    <p>Нижегородский театр оперы и балета имени А. С. Пушкина был основан в 1935 году как Горьковский театр оперы и балета. В зрительном зале 1152 места.</p>
+                    <img data-label="Нижегородский театр оперы и балета имени А. С. Пушкина"/>
+                    <p>Постановление об организации в городе оперного театра было принято Горсоветом в 1931 году. Под театр было решено перестроить здание Народного дома. Народный дом был построен в 1903 году по инициативе Общества распространения начального образования в Нижегородской губернии при содействии М. Горького. Он был задуман как "очаг культуры" в губернском городе.</p>
+                    <p>К 24 октября 1935 года театр подготовил своё первое представление — оперу А. Бородина "Князь Игорь". Открывать сезон этим произведением стало традицией.</p>
+                    <p>10 февраля 1937 года театр был назван именем А. С. Пушкина. В 1994 году получил звание "академический".</p>
+                </div>
                 <br>
             </div>
         </div>
