--- a/centuries/xx.html
+++ b/centuries/xx.html
@@ -76,7 +76,7 @@
                     <p>На территории Горького было сформировано 56 воинских частей и 72 отряда народного ополчения, которые участвовали в битве под Москвой. На фронтах войны сражались 822 тысячи горьковчан - каждый четвертый житель области, из которых более 350 тысяч человек не вернулись домой. 316 горьковчан были удостоены Золотой Звездой Героя.</p>
                     <img data-label="Построение дивизии перед отправкой на фронт"/>
                     <p>Город был важным центром производства вооружений. Каждый второй автомобиль, каждый третий танк и каждая четвёртая артиллерийская установка были изготовлены на предприятиях города.</p>
-                    <p>К 30-летию Победы, у стен Кремля, был открыт мемориал "Горьковчане - фронту".</p>
+                    <p>К 30-летию Победы у стен Кремля был открыт мемориал "Горьковчане - фронту".</p>
                     <img data-label="Мемориал &quot;Горьковчане - фронту&quot;"/>
                 </div>
                 <div class="chapter" id="after_war" data-chapter="После войны">
