--- a/stands/victorious.html
+++ b/stands/victorious.html
@@ -58,10 +58,23 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">Введение</p>
+                <p class="introduction">Великая Отечественная Война длилась почти 4 года и была очень тяжелым испытанием для страны, не обойдя и Нижний Новгород, называющийся в то время Горьким - город был одним из мощнейших промышленных центров страны, поэтому неоднократно подвергался бомбардировкам, направленным на стратегически важные объекты.</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="example" data-chapter="Пример главы">
-                    <p>Текст главы</p>
+                <div class="chapter" id="bombing" data-chapter="Бомбардировка Горького">
+                    <p>Бомбардировка началась в 01:40 4 ноября 1941 года: три мощных взрыва сотрясли завод "ГАЗ", в 4 часа того же дня произошла бомбардировка завода "Двигатель революции". Затем бомбардировщик полетел в центр города, сделал круг над Кремлем и скрылся.</p>
+                    <img/>
+                    <p>Вскоре были приняты меры по переброске в Автозаводский район дополнительных орудий и боеприпасов, меры по модификации связи и системы управления огнем.</p>
+                    <p>Следующие массированные налеты состоялись в феврале 1942 года, в результате которых было ранено около 50 человек, а убито - 20, однако урон, нанесенный промышленным объектам, был незначителен.</p>
+                    <p>В июне 1943 года Горький вновь подвергся серии массированных ночных налетов немецкой авиации. Атаки вновь обрушились на Горьковский автомобильный завод. Завод был восстановлен 28 октября 1943 года.</p>
+                </div>
+                <div class="chapter" id="industry" data-chapter="Промышленность">
+                    <p>Горьковский автомобильный завод был одним из главных предприятий военного времени. С начала войны было произведено более 70 тысяч автомобилей - 34,8% от всех машин, поставляемых на фронт. Стратегически важной задачей Горьковского автозавода стало производство танков Т-60. Именно превосходство танковой дивизии позволило гитлеровской армии с катастрофически быстрой скоростью продвигаться в глубь страны. Уже 20 июля 1941 года вышло постановление Государственного комитета обороны СССР о налаживании производства легковых танков Т-60 на ГАЗе.</p>
+                    <p>Завод "Красное Сормово" — один из старейших нижегородских судостроительных предприятий, основанный еще в середине XIX века, был вынужден перейти на производство танков - в годы Великой Отечественной войны основной продукцией стали танки Т-34 и подводные лодки. Подводных лодок город собрал для фронта в количестве 23 штук.</p>
+                    <img data-label="Подводная лодка, сделанная на заводе &quot;Красное Сормово&quot; в годы войны"/>
+                </div>
+                <div class="chapter" id="memory" data-chapter="Память">
+                    <p>К 30-летию Победы у стен Кремля был открыт мемориал "Горьковчане - фронту".</p>
+                    <img data-label="Мемориал &quot;Горьковчане - фронту&quot;"/>
                 </div>
                 <br>
             </div>
