--- a/stands/musical.html
+++ b/stands/musical.html
@@ -58,10 +58,19 @@
         <div class="page-content">
             <br><br><br>
             <div class="content" id="topic_content">
-                <p class="introduction">Введение</p>
+                <p class="introduction">Нижний Новгород - высококультурный город, со множеством театров и филармоний</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="example" data-chapter="Пример главы">
-                    <p>Текст главы</p>
+                <div class="chapter" id="mstislav" data-chapter="Нижегородская государственная Академическая Филармония имени Мстислава Ростроповича">
+                    <p>Государственная Академическая филармония имени Мстислава Ростроповича расположена в историческом центре Нижнего Новгорода - на территории нижегородского Кремля, являясь одной из старейших концертных организаций - она была основана в 1937 году. Сегодня она остается главным организатором симфонических, камерных, органных и литературных концертов, а ее Кремлевский концертный зал - центральной концертной площадкой города.</p>
+                    <img/>
+                    <p>В 2004 году Нижегородской филармонии присвоено имя Мстислава Леопольдовича Ростроповича - советского, а затем российского виолончелиста, пианиста, дирижера и композитора.</p>
+                </div>
+                <div class="chapter" id="balakirev" data-chapter="Нижегородское музыкальное училище имени М. А. Балакирева">
+                    <p>История Нижегородского музыкального училища начинается во второй половине XIX века, когда Россия активно вовлекается в европейский культурный процесс.</p>
+                    <p>В 1907 году Музыкальные классы были реорганизованы в Музыкальное училище. К 1913 году (40-летний юбилей) в училище существовали 6 спецклассов: сольное пение, фортепиано, скрипка, виолончель, контрабас и деревянные духовые инструменты и 6 классов обязательных предметов: сольфеджио, элементарная теория музыки, гармония, энциклопедия, ансамбль и история музыки, контингент учащихся составлял 155 человек. Окончание училища давало выпускнику право на поступление в музыкальный вуз.</p>
+                    <img/>
+                    <p>После 1918 года учебное заведение в духе времени не раз меняло названия - Народная консерватория, Государственная консерватория, Музыкальный университет, Музыкальный техникум, затем – Музтеатехникум, а с 1938 года - вновь Музыкальное училище.</p>
+                    <p>К своему 100-летию в 1973 году Горьковское музыкальное училище было награждено орденом "Знак Почёта", а несколько позже получило имя великого нижегородца М.А. Балакирева - композитора, пианиста, дирижёра XIX-XX века и главы "Могучей кучки" - творческого объединения русских композиторов.</p>
                 </div>
                 <br>
             </div>
