Промышленный Нижний - вторая часть

--- a/stands/industrial.html
+++ b/stands/industrial.html
@@ -64,6 +64,20 @@
                     <p>Машиностроение и металлообработка являются крупнейшими отраслями промышленности области. Машиностроение составляет 45% промышленного производства Нижегородской области. Согласно экспертной оценке, промышленность региона специализирована на транспортном машиностроении: автостроении, судостроении и самолетостроении.</p>
                     <p>В этой отрасли в Нижегородской области представлены такие крупные компании как "Группа ГАЗ", "Ростехнологии", "Росатом".</p>
                     <img data-label="Горьковский автомобильный завод"/>
+                    <p>Нижегородский машиностроительный завод основан в 1932 году под названием "Новое Сормово". В 1934 году на заводе было организовано конструкторское бюро во главе с конструктором артиллерийских систем Василием Гавриловичем Грабиным. В годы Великой Отечественной Войны заводом было выпущено более 100 тысяч пушек.</p>
+                    <p>В 1994 году прошла приватизация, в ходе которой предприятие было преобразовано в открытое акционерное общество.</p>
+                    <img data-label="Нижегородский машиностроительный завод"/>
+                </div>
+                <div class="chapter" id="aircraft" data-chapter="Авиастроение">
+                    <p>Авиционная промылешнность Нижегородской области представлена 11 предприятими и организациями, в том числе 5 научно-исследовательскими и проектно-конструкторскими организациями. Предприятия и организация обладают высоким научным и производственным потенциалом.</p>
+                    <p>Основными направлениями являются производство истребителей МиГ-31, МиГ-29УБ, самолетов многоцелевого назначения "Гжель", "Аккорд", учебно-тренировочного самолета Як-130, модернизация самолетов МиГ-31, МиГ-29, МиГ-21, разработка и создание новых образцов бортовой и наземной аппаратуры навигации, обнаружение и связи, производство взлетно-посадочных устройств для тяжелых и легких самолетов.</p>
+                    <img data-label="Истребитель МиГ-31"/>
+                </div>
+                <div class="chapter" id="shipbuilding" data-chapter="Судостроение">
+                    <p>История судостроения в Нижнем Новгороде берет начало от Северной войны, в ходе которой Петр I создал первый российский флот.</p>
+                    <p>В состав комплекса входят 12 судостроительно-судоремонтых заводов, 4 конструкторских бюро и 3 специализированных научно-исследовательских института.</p>
+                    <p>Кроме того, на территории области располагается ряд специализированных поставщиков судового комплектующего оборудования.</p>
+                    <img data-label="Корабль завода &quot;Красное Сормово&quot;"/>
                 </div>
                 <br>
             </div>
