--- a/stands/industrial.html
+++ b/stands/industrial.html
@@ -79,6 +79,12 @@
                     <p>Кроме того, на территории области располагается ряд специализированных поставщиков судового комплектующего оборудования.</p>
                     <img data-label="Корабль завода &quot;Красное Сормово&quot;"/>
                 </div>
+                <div class="chapter" id="other" data-chapter="Другая промышленность">
+                    <p><b>Лёгкая и пищевая промышленность</b> представлены чулочно-трикотажными, кожевенно-обувными, швейными предприятиями, мясокомбинатом, колбасным заводом, молочным комбинатом, пивзаводом (пиво "Окское"), кондитерской фабрикой и др. Работает ряд предприятий деревообрабатывающей и полиграфической отраслей.</p>
+                    <p><b>Химическая промышленность</b> Нижегородской области сосредоточена в Нижнем Новгороде и Дзержинске. Она включает в себя продукты органического синтеза, пластмассы и синтетические смолы, оргстекло, лаки, краски и ядохимикаты. Нижегородское предприятие <i>"Оргсинтез"</i> - одно из крупнейших предприятий лесохимической промышленности в России. В городе работает завод <i>"НИЖФАРМ"</i> - один из крупнейших производителей лекарств в России.</p>
+                    <p><b>Нефтепереработка</b> представлена такими предприятиями как <i>Лукойл</i>, <i>Русвинил</i> и <i>СИБУР</i></p>
+                    <img data-label="Офис &quot;НИЖФАРМ&quot;"/>
+                </div>
                 <br>
             </div>
         </div>
