Скрытие ссылки с QR кодами

--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
                     </div>
                 </div>
                 <br><br>
-                <a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" href="qr-codes.zip" style="color: white">
+                <!--<a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" href="qr-codes.zip" style="color: white">
                     Скачать QR-коды
-                </a>
+                </a>-->
                 <br>
             </div>
         </div>
