--- a/centuries/xiv.html
+++ b/centuries/xiv.html
@@ -60,7 +60,7 @@
             <div class="content" id="topic_content">
                 <p class="introduction">К XIV веку Русь оказалась в зависимости от Золотой Орды. Князьям требовалось получать из рук ордынцев ярлык на княжение. В гораздо более выгодном положении по сравнению с остальными русскими княжествами оказалась Москва – московский князь Иван Калита (1322 — 1340), заручившись поддержкой орды, начинает процесс объединения Руси.</p>
                 <div id="table_of_contents"></div>
-                <div class="chapter" id="confrontation" data-chapter="Междоусобица владимирсого и московского князя">
+                <div class="chapter" id="confrontation" data-chapter="Междоусобица владимирского и московского князя">
                     <p>В 1311 году шла борьба за великокняжеский трон между владимирским и московским князьями. Московский князь Юрий Даниилович завоевал Нижний Новгород у владимирского князя Михаила Ярославича, где посадил на княжение своего брата Бориса Даниловича. После его смерти, на короткий период времени, город вновь оказался в составе Владимирского княжества. Тверской князь Александр Михайлович поддержал восстание против ордынцев в Твери, из-за чего хан Узбек призвал московского князя Ивана Калиту разорить Тверское княжество. К ним присоединился суздальский князь Александр Васильевич. После победы хан Узбек разделил великокняжеские владения, часть отдав большую часть московскому князю. Часть земель, включая бывшее Городецкое княжество, досталась Суздальскому княжеству.</p>
                     <p>После смерти суздальского князя в 1331 году земли перешли великому князю московскому Ивану Калите, который управлял им при помощи наместников.</p>
                 </div>
