--- a/stands/architectural.html
+++ b/stands/architectural.html
@@ -98,6 +98,12 @@
                     <img/>
                     <img data-label="Фотограция XIX века"/>
                 </div>
+                <div class="chapter" id="monastery" data-chapter="Вознесенский Печерский мужской монастырь">
+                    <p>Вознесенский Печерский мужской монастырь основан в начале XIV столетия монахом Киево-Печерского монастыря Дионисием, ставшим впоследствии Суздальско-Нижегородским архипастырем, крупнейшим историческим деятелем своего времени. Расположен монастырь примерно в 3 километрах от Нижегородского кремля, ниже по течению Волги. Многие годы он был крупнейшим духовно-культурным центром Поволжья и одним из самых значимых в России.</p>
+                    <img data-label="Вознесенский Печерский мужской монастырь"/>
+                    <p> В стенах Вознесенского Печерского монастыря была создана Лаврентьевская летопись — древнейшая датированная русская летопись, которая дошла до наших дней. В составе Лаврентьевской летописи до нас дошел самый древний из сохранившихся список "Повести временных лет".</p>
+                    <p>Монастырь был закрыт в 1924 году. На его территории появились жилые корпуса, кинотеатр, архитектурно-реставрационная мастерская. В 1994 году была возобновлена обитель, начались реставрационные работы.</p>
+                </div>
                 <br>
             </div>
         </div>
