--- a/centuries/xiii.html
+++ b/centuries/xiii.html
@@ -66,7 +66,7 @@
                     <p>Первая деревянно-земляная крепость занимала чрезвычайно выгодное военно-стратегическое положение на Часовой горе. Была хорошо защищена с одной стороны глубоким оврагом, с другой — крутыми обрывами-осыпями волжского берега. В первые годы в крепости были построены два белокаменных храма, в том числе Архангельский собор в 1227 году.</p>
                     <img data-label="Михайло-Архангельский собор. Наши дни"/>
                 </div>
-                <div class="chapter" id="affiliation" data-chapter="Принадлежность">
+                <div class="chapter" id="state" data-chapter="Принадлежность">
                     <p>Русь находилась в раздробленном состоянии в начале тысячелетия. После основания Нижний Новгород входил в состав Владимиро-Суздальской Руси, затем на короткий отрезок времени в Нижем Новгороде была установлена "вечевая республика" по типу Великого Новгорода – форма политического устройства, при которой вопросы обсуждаются на народном собрании – вече.</p>
                     <img data-label="Новгородское вече"/>
                     <p>В последней трети XIII века из состава Суздальского княжества, частью которого являлся Нижний Новгород, выделилось недолго просуществовавшее Городецкое княжество.</p>
