--- a/404.html
+++ b/404.html
@@ -7,8 +7,8 @@
     <script src="/design/mdl/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/js/common.js">
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/common.min.css">
+    <link rel="stylesheet" href="/css/index.min.css">
     <title>Страница не найдена - Исторический зал</title>
     <style>
         .outer {
