--- a/stands/literary.html
+++ b/stands/literary.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="../design/mdl/material.min.css">
     <script src="../design/mdl/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/common.min.css">
     <script>var topicName='Литературный Нижний';var topicCategory='stand';var topicId='literary'</script>
     <script src="../js/common.js"></script>
     <script src="../js/topic.js"></script>
-    <link rel="stylesheet" href="../css/topic.css">
+    <link rel="stylesheet" href="../css/topic.min.css">
     <title>Литературный Нижний - Исторический зал</title>
 </head>
 <body>
