Редизайн меню-гамбургера, оттенение оглавления

--- a/centuries/xix.html
+++ b/centuries/xix.html
@@ -28,30 +28,32 @@
         <div class="mdl-layout-drawer-title-area">
             <img id="drawer-icon" class="mini-logo mdl-layout-drawer-title-logo" src="../img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
             <span class="mdl-layout-title">Исторический зал</span>
+            <span class="mdl-layout-subtitle">Гимназии №2</span>
         </div>
+        <hr>
         <nav class="mdl-navigation">
-            <a class="mdl-navigation__link" href="../index.html">Главная</a>
+            <a class="mdl-navigation__link" href="../index.html"><i class="material-icons">home</i>Главная</a>
             <span id="navigation-table_of_contents"></span>
 
             <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Столетия:</a>
-            <a class="mdl-navigation__link" href="../centuries/xiii.html">XIII век</a>
-            <a class="mdl-navigation__link" href="../centuries/xiv.html">XIV век</a>
-            <a class="mdl-navigation__link" href="../centuries/xv.html">XV век</a>
-            <a class="mdl-navigation__link" href="../centuries/xvi.html">XVI век</a>
-            <a class="mdl-navigation__link" href="../centuries/xvii.html">XVII век</a>
-            <a class="mdl-navigation__link" href="../centuries/xviii.html">XVIII век</a>
-            <a class="mdl-navigation__link mdl-navigation-current-topic">XIX век</a>
-            <a class="mdl-navigation__link" href="../centuries/xx.html">XX век</a>
+            <a class="mdl-navigation__link" href="../centuries/xiii.html"><i class="material-icons">history</i>XIII век</a>
+            <a class="mdl-navigation__link" href="../centuries/xiv.html"><i class="material-icons">history</i>XIV век</a>
+            <a class="mdl-navigation__link" href="../centuries/xv.html"><i class="material-icons">history</i>XV век</a>
+            <a class="mdl-navigation__link" href="../centuries/xvi.html"><i class="material-icons">history</i>XVI век</a>
+            <a class="mdl-navigation__link" href="../centuries/xvii.html"><i class="material-icons">history</i>XVII век</a>
+            <a class="mdl-navigation__link" href="../centuries/xviii.html"><i class="material-icons">history</i>XVIII век</a>
+            <a class="mdl-navigation__link mdl-navigation-current-topic"><i class="material-icons">history</i>XIX век</a>
+            <a class="mdl-navigation__link" href="../centuries/xx.html"><i class="material-icons">history</i>XX век</a>
 
             <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Стенды:</a>
-            <a class="mdl-navigation__link" href="../stands/architectural.html">Архитектурный Нижний</a>
-            <a class="mdl-navigation__link" href="../stands/literary.html">Литературный Нижний</a>
-            <a class="mdl-navigation__link" href="../stands/theatrical.html">Театральный Нижний</a>
-            <a class="mdl-navigation__link" href="../stands/industrial.html">Промышленный Нижний</a>
-            <a class="mdl-navigation__link" href="../stands/victorious.html">Победный Нижний</a>
-            <a class="mdl-navigation__link" href="../stands/musical.html">Музыкальный Нижний</a>
-            <a class="mdl-navigation__link" href="../stands/orthodoxic.html">Православный Нижний</a>
-            <a class="mdl-navigation__link" href="../stands/honorary_citizens.html">Почетные граждане</a>
+            <a class="mdl-navigation__link" href="../stands/architectural.html"><i class="material-icons">apartment</i>Архитектурный Нижний</a>
+            <a class="mdl-navigation__link" href="../stands/literary.html"><i class="material-icons">book</i>Литературный Нижний</a>
+            <a class="mdl-navigation__link" href="../stands/theatrical.html"><i class="material-icons">theaters</i>Театральный Нижний</a>
+            <a class="mdl-navigation__link" href="../stands/industrial.html"><i class="material-icons">emoji_transportation</i>Промышленный Нижний</a>
+            <a class="mdl-navigation__link" href="../stands/victorious.html"><i class="material-icons">flag</i>Победный Нижний</a>
+            <a class="mdl-navigation__link" href="../stands/musical.html"><i class="material-icons">music_note</i>Музыкальный Нижний</a>
+            <a class="mdl-navigation__link" href="../stands/orthodoxic.html"><i class="material-icons">meeting_room</i>Православный Нижний</a>
+            <a class="mdl-navigation__link" href="../stands/honorary_citizens.html"><i class="material-icons">person_outline</i>Почетные граждане</a>
         </nav>
     </div>
     <main class="mdl-layout__content">
