--- a/404.html
+++ b/404.html
@@ -76,10 +76,23 @@
         <div class="page-content">
             <div class="outer">
                 <div class="middle">
-                    <div class="inner">
+                    <div class="inner" style="background-image: url('/img/flag.jpg')">
                         <h3>Страница не найдена</h3>
                         <h5><a href="/index.html">На главную</a></h5>
-                        <img style="width: 25%;height:10%" src="/img/flag.jpg" alt="Флаг Нижегородской области" />
+                        <table>
+                            <tr>
+                                <th>Столетия</th>
+                                <th>Стенды</th>
+                            </tr>
+                            <tr><td><a href="/centuries/xiii.html"><i class="material-icons">history</i>XIII век</a></td><td><a href="/stands/architectural.html"><i class="material-icons">apartment</i>Архитектурный Нижний</a></td></tr>
+                            <tr><td><a href="/centuries/xiv.html"><i class="material-icons">history</i>XIV век</a></td><td><a href="/stands/literary.html"><i class="material-icons">book</i>Литературный Нижний</a></td></tr>
+                            <tr><td><a href="/centuries/xv.html"><i class="material-icons">history</i>XV век</a></td><td><a href="/stands/theatrical.html"><i class="material-icons">theaters</i>Театральный Нижний</a></td></tr>
+                            <tr><td><a href="/centuries/xvi.html"><i class="material-icons">history</i>XVI век</a></td><td><a href="/stands/industrial.html"><i class="material-icons">emoji_transportation</i>Промышленный Нижний</a></td></tr>
+                            <tr><td><a href="/centuries/xvii.html"><i class="material-icons">history</i>XVII век</a></td><td><a href="/stands/victorious.html"><i class="material-icons">flag</i>Победный Нижний</a></td></tr>
+                            <tr><td><a href="/centuries/xviii.html"><i class="material-icons">history</i>XVIII век</a></td><td><a href="/stands/musical.html"><i class="material-icons">music_note</i>Музыкальный Нижний</a></td></tr>
+                            <tr><td><a href="/centuries/xix.html"><i class="material-icons">history</i>XIX век</a></td><td><a href="/stands/orthodoxic.html"><i class="material-icons">meeting_room</i>Православный Нижний</a></td></tr>
+                            <tr><td><a href="/centuries/xx.html"><i class="material-icons">history</i>XX век</a></td><td><a href="/stands/honorary_citizens.html"><i class="material-icons">person_outline</i>Почетные граждане</a></td></tr>
+                        </table>
                     </div>
                 </div>
             </div>
