--- a/404.html
+++ b/404.html
@@ -76,7 +76,7 @@
         <div class="page-content">
             <div class="outer">
                 <div class="middle">
-                    <div class="inner" style="background-image: url('/img/flag.jpg')">
+                    <div class="inner" style="margin: 0 auto;">
                         <h3>Страница не найдена</h3>
                         <h5><a href="/index.html">На главную</a></h5>
                         <table>
