--- a/404.html
+++ b/404.html
@@ -28,6 +28,12 @@
             margin-right: auto;
             width: 100%;
         }
+        .inner .material-icons {
+            vertical-align: bottom;
+            margin-right: 5px;
+            margin-top: 4px;
+            margin-bottom: 1px;
+        }
     </style>
 </head>
 <body>
@@ -76,10 +82,10 @@
         <div class="page-content">
             <div class="outer">
                 <div class="middle">
-                    <div class="inner" style="margin: 0 auto;">
+                    <div class="inner">
                         <h3>Страница не найдена</h3>
                         <h5><a href="/index.html">На главную</a></h5>
-                        <table>
+                        <table style="margin: 0 auto;">
                             <tr>
                                 <th>Столетия</th>
                                 <th>Стенды</th>
