Еще немного полировки

--- a/404.html
+++ b/404.html
@@ -34,6 +34,32 @@
             margin-top: 4px;
             margin-bottom: 1px;
         }
+        .inner td {
+            text-align: left;
+        }
+        .inner td + td {
+            text-align: right;
+        }
+        .inner a {
+            cursor: pointer;
+        }
+        .inner a:hover {
+            cursor: pointer;
+            text-decoration: underline;
+        }
+        .inner a {
+            color: blue;
+        }
+        .inner a:hover {
+            color: mediumblue;
+        }
+        .inner a:visited {
+            color: darkblue;
+        }
+        .inner a:active {
+            cursor: pointer;
+            color: darkblue;
+        }
     </style>
 </head>
 <body>
@@ -68,14 +94,14 @@
             <a class="mdl-navigation__link" href="/centuries/xx.html"><i class="material-icons">history</i>XX век</a>
 
             <a class="mdl-navigation__link mdl-layout__drawer-navigation-subcategory">Стенды:</a>
-            <a class="mdl-navigation__link" href="/stands/architectural.html"><i class="material-icons">apartment</i>Архитектурный Нижний</a>
-            <a class="mdl-navigation__link" href="/stands/literary.html"><i class="material-icons">book</i>Литературный Нижний</a>
-            <a class="mdl-navigation__link" href="/stands/theatrical.html"><i class="material-icons">theaters</i>Театральный Нижний</a>
-            <a class="mdl-navigation__link" href="/stands/industrial.html"><i class="material-icons">emoji_transportation</i>Промышленный Нижний</a>
-            <a class="mdl-navigation__link" href="/stands/victorious.html"><i class="material-icons">flag</i>Победный Нижний</a>
-            <a class="mdl-navigation__link" href="/stands/musical.html"><i class="material-icons">music_note</i>Музыкальный Нижний</a>
-            <a class="mdl-navigation__link" href="/stands/orthodoxic.html"><i class="material-icons">meeting_room</i>Православный Нижний</a>
-            <a class="mdl-navigation__link" href="/stands/honorary_citizens.html"><i class="material-icons">person_outline</i>Почетные граждане</a>
+            <a class="mdl-navigation__link" href="/stands/architectural.html">Архитектурный Нижний<i class="material-icons">apartment</i></a>
+            <a class="mdl-navigation__link" href="/stands/literary.html">Литературный Нижний<i class="material-icons">book</i></a>
+            <a class="mdl-navigation__link" href="/stands/theatrical.html">Театральный Нижний<i class="material-icons">theaters</i></a>
+            <a class="mdl-navigation__link" href="/stands/industrial.html">Промышленный Нижний<i class="material-icons">emoji_transportation</i></a>
+            <a class="mdl-navigation__link" href="/stands/victorious.html">Победный Нижний<i class="material-icons">flag</i></a>
+            <a class="mdl-navigation__link" href="/stands/musical.html">Музыкальный Нижний<i class="material-icons">music_note</i></a>
+            <a class="mdl-navigation__link" href="/stands/orthodoxic.html">Православный Нижний<i class="material-icons">meeting_room</i></a>
+            <a class="mdl-navigation__link" href="/stands/honorary_citizens.html">Почетные граждане<i class="material-icons">person_outline</i></a>
         </nav>
     </div>
     <main class="mdl-layout__content">
