Текст вместо таблицы

--- a/404.html
+++ b/404.html
@@ -34,17 +34,12 @@
             margin-top: 4px;
             margin-bottom: 1px;
         }
-        .inner td {
-            text-align: left;
-        }
-        .inner td + td {
-            text-align: right;
-        }
-        .inner a:hover {
-            text-decoration: underline;
-        }
         .inner a {
             color: blue;
+            text-decoration: none;
+        }
+        .inner a:hover {
+            text-decoration: underline !important;
         }
         .inner a:hover {
             color: mediumblue;
@@ -106,20 +101,24 @@
                     <div class="inner">
                         <h3>Страница не найдена</h3>
                         <h5><a href="/index.html">На главную</a></h5>
-                        <table style="margin: 0 auto;">
-                            <tr>
-                                <th>Столетия</th>
-                                <th>Стенды</th>
-                            </tr>
-                            <tr><td><a href="/centuries/xiii.html"><i class="material-icons">history</i>XIII век</a></td><td><a href="/stands/architectural.html"><i class="material-icons">apartment</i>Архитектурный Нижний</a></td></tr>
-                            <tr><td><a href="/centuries/xiv.html"><i class="material-icons">history</i>XIV век</a></td><td><a href="/stands/literary.html"><i class="material-icons">book</i>Литературный Нижний</a></td></tr>
-                            <tr><td><a href="/centuries/xv.html"><i class="material-icons">history</i>XV век</a></td><td><a href="/stands/theatrical.html"><i class="material-icons">theaters</i>Театральный Нижний</a></td></tr>
-                            <tr><td><a href="/centuries/xvi.html"><i class="material-icons">history</i>XVI век</a></td><td><a href="/stands/industrial.html"><i class="material-icons">emoji_transportation</i>Промышленный Нижний</a></td></tr>
-                            <tr><td><a href="/centuries/xvii.html"><i class="material-icons">history</i>XVII век</a></td><td><a href="/stands/victorious.html"><i class="material-icons">flag</i>Победный Нижний</a></td></tr>
-                            <tr><td><a href="/centuries/xviii.html"><i class="material-icons">history</i>XVIII век</a></td><td><a href="/stands/musical.html"><i class="material-icons">music_note</i>Музыкальный Нижний</a></td></tr>
-                            <tr><td><a href="/centuries/xix.html"><i class="material-icons">history</i>XIX век</a></td><td><a href="/stands/orthodoxic.html"><i class="material-icons">meeting_room</i>Православный Нижний</a></td></tr>
-                            <tr><td><a href="/centuries/xx.html"><i class="material-icons">history</i>XX век</a></td><td><a href="/stands/honorary_citizens.html"><i class="material-icons">person_outline</i>Почетные граждане</a></td></tr>
-                        </table>
+                        <br>
+                        <a href="/centuries/xiii.html"><i class="material-icons">history</i>XIII век</a>
+                        <a href="/centuries/xiv.html"><i class="material-icons">history</i>XIV век</a>
+                        <a href="/centuries/xv.html"><i class="material-icons">history</i>XV век</a>
+                        <a href="/centuries/xvi.html"><i class="material-icons">history</i>XVI век</a>
+                        <a href="/centuries/xvii.html"><i class="material-icons">history</i>XVII век</a>
+                        <a href="/centuries/xviii.html"><i class="material-icons">history</i>XVIII век</a>
+                        <a href="/centuries/xix.html"><i class="material-icons">history</i>XIX век</a>
+                        <a href="/centuries/xx.html"><i class="material-icons">history</i>XX век</a>
+                        <br>
+                        <a href="/stands/architectural.html">Архитектурный Нижний<i class="material-icons">apartment</i></a>
+                        <a href="/stands/literary.html">Литературный Нижний<i class="material-icons">book</i></a>
+                        <a href="/stands/theatrical.html">Театральный Нижний<i class="material-icons">theaters</i></a>
+                        <a href="/stands/industrial.html">Промышленный Нижний<i class="material-icons">emoji_transportation</i></a>
+                        <a href="/stands/victorious.html">Победный Нижний<i class="material-icons">flag</i></a>
+                        <a href="/stands/musical.html">Музыкальный Нижний<i class="material-icons">music_note</i></a>
+                        <a href="/stands/orthodoxic.html">Православный Нижний<i class="material-icons">meeting_room</i></a>
+                        <a href="/stands/honorary_citizens.html">Почетные граждане<i class="material-icons">person_outline</i></a>
                     </div>
                 </div>
             </div>
